# HyGraph-Explorer

./: LICENSE  README.md
Hygraph-develop/: LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
Hygraph-develop/hygraph_core/: README.md  web_api.py
Hygraph-develop/hygraph_core.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
Hygraph-develop/hygraph_core/hygraph/: hygraph.py
Hygraph-develop/hygraph_core/ingest/: csv_loader.py  metrla_loader.py
Hygraph-develop/hygraph_core/model/: timeseries.py
Hygraph-develop/hygraph_core/operators/: TSGen.py  __init__.py  change_propagation.py  diff_result.py  graph_metrics.py  hygraphDiff.py  predicate_induced.py  temporal_snapshot.py  tsgen_induced.py
Hygraph-develop/hygraph_core/storage/: age.py  filtered_stored.py  fluent_api.py  hybrid_storage.py  timescale.py
Hygraph-develop/tests/: check-age-data.py  ingestion.py  test_find_pattern.py  test_ingestion.py  workflow-example.py
Hygraph-develop/tests/outputs/: spectral_wavelet_2d_results.nc
hygraph-webapp/: package-lock.json  package.json
hygraph-webapp/public/: index.html
hygraph-webapp/src/: App.css  App.jsx  index.css
hygraph-webapp/src/components/: ChangeExplorer.css  ChangeExplorer.jsx  CreateEntityModal.css  CreateEntityModal.jsx  GraphView.css  GraphView.jsx  InducedExplorer.css  InducedExplorer.jsx  MetadataPanel.css  MetadataPanel.jsx  PatternMatchingPanel.css  PatternMatchingPanel.jsx  SnapshotWindow.css  SnapshotWindow.jsx  TimeSeriesPanel.css  TimeSeriesPanel.jsx  WorkflowBuilder.css  WorkflowBuilder.jsx
