[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hygraph-core"
version = "0.1.0"
description = "HyGraph core (in-memory + Postgres backend)"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "psycopg[binary]>=3.1",
  "psycopg-pool>=3.1",
  "networkx>=3.0",
  "pandas>=2.0.0",
  "xarray>=2023.1.0",
  "numpy>=1.23",
  "fastdtw>=0.3.4",
  "scipy>=1.10",
  "statsmodels>=0.14",
  "scikit-learn>=1.3",
  "python-igraph>=0.11",
  "matplotlib>=3.7",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["hygraph_core*"]
exclude = ["dist*", "build*", ".idea*", ".vscode*", "docker*", "inputFiles*", "upload_files*"]
